[gd_scene load_steps=7 format=2]

[ext_resource path="res://_Assets/Scenes/Roll_A_Ball.dae" type="PackedScene" id=1]
[ext_resource path="res://_Assets/Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://_Assets/Scripts/Camera.gd" type="Script" id=3]
[ext_resource path="res://_Assets/Scripts/Character.gd" type="Script" id=4]
[ext_resource path="res://_Assets/Prefabs/PickUp.tscn" type="PackedScene" id=5]

[sub_resource type="SphereShape" id=1]

radius = 1.19579

[node name="Scene Root" index="0" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="Camera" parent="." index="0"]

transform = Transform( 1, -1.2736e-16, -4.01563e-17, 1.12282e-16, 0.639105, 0.769119, -7.22908e-17, -0.769119, 0.639105, -6.53678e-17, 15.3484, 14.2281 )
script = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Character" parent="." index="1"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.333528, 1.20077, 0 )
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]
SPEED = 15

[node name="shape" parent="Character" index="1"]

shape = SubResource( 1 )

[node name="Ground" parent="." index="2"]

editor/display_folded = true
cast_shadow = 0
_sections_unfolded = [ "Geometry" ]

[node name="col" parent="Ground" index="0"]

editor/display_folded = true

[node name="Sun" parent="." index="3"]

shadow_enabled = true
_sections_unfolded = [ "Shadow" ]

[node name="Wall_E" parent="." index="4"]

editor/display_folded = true

[node name="Wall_N" parent="." index="5"]

editor/display_folded = true

[node name="Wall_S" parent="." index="6"]

editor/display_folded = true

[node name="Wall_W" parent="." index="7"]

editor/display_folded = true

[node name="PickUps" type="Node" parent="." index="9"]

[node name="PickUp" parent="PickUps" index="0" instance=ExtResource( 5 )]

[node name="PickUp2" parent="PickUps" index="1" instance=ExtResource( 5 )]

transform = Transform( 0.995347, 0, 0, 0, 0.995347, 0, 0, 0, 0.995347, 5, 1, 0.24026 )

[node name="PickUp3" parent="PickUps" index="2" instance=ExtResource( 5 )]

transform = Transform( 0.995347, 0, 0, 0, 0.995347, 0, 0, 0, 0.995347, -6, 1, 0.24026 )

[node name="PickUp4" parent="PickUps" index="3" instance=ExtResource( 5 )]

transform = Transform( 0.995347, 0, 0, 0, 0.995347, 0, 0, 0, 0.995347, 0, 1, 5.24026 )

[node name="HUD" type="CanvasLayer" parent="." index="10"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="ScoreControl" type="Control" parent="HUD" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 176.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ScoreLabel" type="Label" parent="HUD/ScoreControl" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 45.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "SCORE:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ScoreCount" type="Label" parent="HUD/ScoreControl" index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -36.0
margin_right = 24.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MessageText" type="Label" parent="HUD" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.0
margin_top = -7.0
margin_right = 51.0
margin_bottom = 7.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="updateCounter" from="PickUps/PickUp" to="." method="onUpdateCounter"]

[connection signal="updateCounter" from="PickUps/PickUp2" to="." method="onUpdateCounter"]

[connection signal="updateCounter" from="PickUps/PickUp3" to="." method="onUpdateCounter"]

[connection signal="updateCounter" from="PickUps/PickUp4" to="." method="onUpdateCounter"]


